customization
- can highlight entities
- can disable highlight
- command to list current friends
- updated todos